<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mpl.mplappbank.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_operaciones"
        android:name="com.mpl.mplappbank.operaciones.Operaciones"
        android:label="@string/menu_operaciones"
        tools:layout="@layout/fragment_operaciones" />

    <fragment
        android:id="@+id/nav_datoscuenta"
        android:name="com.mpl.mplappbank.datoscuenta.DatosCuenta"
        android:label="@string/menu_datos_cuenta"
        tools:layout="@layout/fragment_datos_cuenta" />
    <fragment
        android:id="@+id/nav_registro"
        android:name="com.mpl.mplappbank.registro.Registro"
        android:label="@string/menu_registro"
        tools:layout="@layout/fragment_registro" />
</navigation>